# electron_updater

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: aarch.yml  aarch64_release.yml  lint.yml  updater.yml  x86_64_release.yml
docs/: index.md
src/: lib.rs  main.rs  sysinfo.rs  task.rs  ui.rs  updater.rs
src/mlog/: log_debug.rs  mod.rs
