[package]
name = "updater"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.66"
serde = "1.0.127"
serde_derive = "1.0.127"
sysinfo = "0.20.0"
druid = { git = "https://github.com/linebender/druid.git", optional = true}

[features]
default = ["druid"]